[package]
name = "nifpga-apigen"
version = "0.2.1"
authors = ["David Taylor <david.baker.taylor@gmail.com>", "Andy Cate <andy.cate@thea.energy>"]
edition = "2021"
description = "API generator for NI FPGAs"
license = "MIT"

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
